--- a/runbot/views/build_view.xml
+++ b/runbot/views/build_view.xml
@@ -6,6 +6,8 @@
             <field name="arch" type="xml">
                 <form string="Build">
                     <header>
+                        <button type="object" name="start_server" string="Start" states="killed,stopped"/>
+                        <button type="object" name="kill" string="Kill" states="running"/>
                         <field name="state" widget="statusbar"
                                 statusbar_colors="{'killed':'red','creation':'blue', 'running':'green','stopped':'red'}"/>
                     </header>
