Improve navigation with breadcrumbs. Displayed sticky branches first. Replace breadcrumbs and make it bigger.

--- a/runbot/static/src/css/runbot.css
+++ b/runbot/static/src/css/runbot.css
@@ -13,3 +13,10 @@
 .content {
     margin-top: 25px;
 }
+
+.breadcrumb {
+    float: left !important;
+    right: auto !important;
+    font-size: 14px !important;
+
+}
