--- a/runbot/static/src/css/runbot.css
+++ b/runbot/static/src/css/runbot.css
@@ -6,6 +6,14 @@
     margin-bottom: 0px; !important
 }
 
+.info-box-icon {
+    width: 60px !important;
+}
+
+.info-box-content {
+    margin-left: 60px !important;
+}
+
 .builds-wrapper {
     padding: 0 5px;
 }
