--- a/runbot/views/runbot_template.xml
+++ b/runbot/views/runbot_template.xml
@@ -139,6 +139,7 @@
                                                                             <a t-attf-href="/runbot/#{'build/%s' % slug(build)}"><span class="info-box-text">#<t t-esc="build.id"/></span></a>
                                                                             <span class="info-box-number" t-field="build.short_name"/>
                                                                             <small class="text-muted" t-field="build.state"/>
+                                                                            <span><i class="ion-ios-timer-outline"></i> <small class="text-muted" t-field="time_ago(build.last_state_since, 1)"/></span>
                                                                         </div>
                                                                         <!-- /.info-box-content -->
                                                                     </div>
